444 remove the public private toggle (#578)
* #444 Moved "my lists" to its own view with button in top section

Removed check-box

* #444 WIP isPrivate values showing in facets

Still not showing records when filtering by isPrivate

* #444 WIP -  home, admin-view and my-lists working now

* #444 bug fixes and UX improvements

Searching filters now work. Skeletons added to both facets and results.

* #444 UI tweaks and minor fixes

* #444 Fix for my-lists search showing results for all lists

Plus other odd behaviour

* #444 Add redirect for legacy my-lists bookmarks

* Partially broken implementation

* WIP Refactor of GraphQL controller methods

To simplify controller code by moving business logic out to service class, improve code readability and reuse of methods.

* #444 Refactor of search services

New services created that stick to one function

* #444 Home page always shows public lists only

Admin view moved to its own page via admin menu. Mimics legacy lists behaviour.

* #444 Code cleanup, copyright and formatting

* Update docker-compose.yml

* #444 Changed facet controls

Expand/collapse control icons changed from +/- to ⋁/⋀ - based on UX research that shows these perform better.